Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -209,11 +209,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Western Hemisphere'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "kindof_neighbors = 'None'\n",
+    "kindof_neighbors = 'Western Hemisphere'\n",
     "kindof_neighbors"
    ]
   },
